Deleted README and LICENSE

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Grapheno",
+  "name": "grapheno",
   "version": "1.0.0",
   "description": "Pixelart Software",
   "main": "src/main.js",
