Moved scripts to separate js/ folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grapheno",
   "version": "1.0.0",
   "description": "Pixelart Software",
-  "main": "src/main.js",
+  "main": "src/js/main.js",
   "scripts": {
     "start": "electron ."
   },
