--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "Pixelart Software",
   "main": "src/js/main_process/main.js",
   "scripts": {
-    "start": ".\\node_modules\\electron\\dist\\electron.exe ."
+    "start": "electron .",
+    "build": "run-os",
+    "build:win32": "electron-builder --win",
+    "build:darwin": "electron-builder --mac",
+    "clean": "rimraf ./dist",
+    "release": "electron-builder --publish always"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/MaiGames/Grapheno/",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Pixelart",
+    "Art",
+    "Game Dev",
+    "Vectors",
+    "Pixels",
+    "Drawing"
   ],
-  "author": "GitHub",
+  "author": "MaiGames Studios",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^9.0.2"
