Fix syntax by adding a missing comma

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   "dependencies": {
     "bulma": "^0.8.2",
     "v8-compile-cache": "^2.1.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
     "electron-is-dev": "^1.0.1"
   }
   "devDependencies": {
