--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:win32": "electron-builder --win",
     "build:darwin": "electron-builder --mac",
     "clean": "rimraf ./dist",
-    "release": "electron-builder --publish always"
+    "release": "electron-builder --publish never"
   },
   "repository": "https://github.com/MaiGames/Grapheno/",
   "keywords": [
