--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@
 
 matrix:
   include:
-    - os: osx
-      osx_image: xcode9.4
-      language: node_js
-      node_js: "8"
-      env:
-        - ELECTRON_CACHE=$HOME/.cache/electron
-        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+    #- os: osx
+    #  osx_image: xcode9.4
+    #  language: node_js
+    #  node_js: "8"
+    #  env:
+    #   - ELECTRON_CACHE=$HOME/.cache/electron
+    #   - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
     # Windows currently doesn't support encrypted variables.
     # Once supported uncomment this out & remove build with Docker
