--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
         }
       ],
       "icon": "assets/ico-256.ico",
-      "publish": ["github"]
+      "publish": [
+        "github"
+      ]
     },
     "nsis": {
       "runAfterFinish": true,
@@ -92,9 +94,10 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
+    "electron-is-dev": "^1.0.1",
     "v8-compile-cache": "^2.1.1",
     "webpack": "^4.43.0",
-    "electron-is-dev": "^1.0.1"
+    "zebras": "0.0.18"
   },
   "devDependencies": {
     "electron": "^9.0.2",
