--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "bulma": "^0.8.2",
     "electron-is-dev": "^1.0.1",
     "pixi.js": "^5.3.0",
+    "tinycolor2": "^1.4.1",
     "v8-compile-cache": "^2.1.1",
     "webpack": "^4.43.0",
     "zebras": "0.0.18"
