--- a/.travis.yml
+++ b/.travis.yml
@@ -65,9 +65,10 @@ branches:
 deploy:
   provider: releases
   api_key: $GH_TOKEN
+  file_glob: true
   file: 
     - "dist/grapheno-installer.exe"
     - "dist/grapheno-portable.exe"
   skip_cleanup: true
   on:
-    tags: false
+    tags: true
