--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ branches:
 deploy:
   provider: releases
   api_key: $GH_TOKEN
-  file_glob: true
+  draft: true
   file: 
     - "dist/grapheno-installer.exe"
     - "dist/grapheno-portable.exe"
