--- a/.travis.yml
+++ b/.travis.yml
@@ -65,10 +65,11 @@ branches:
 deploy:
   provider: releases
   api_key: $GH_TOKEN
+  tag_name: "$TRAVIS_COMMIT_MESSAGE"
   draft: true
   file: 
     - "dist/grapheno-installer.exe"
     - "dist/grapheno-portable.exe"
   skip_cleanup: true
   on:
-    tags: false
+    tags: true
