--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ branches:
 deploy:
   provider: releases
   token: $GH_TOKEN
-  tag_name: $TRAVIS_COMMIT_MESSAGE
+  name: $TRAVIS_COMMIT_MESSAGE
   draft: true
   file: 
     - "dist/grapheno-installer.exe"
