--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "electron-is-dev": "^1.0.1",
     "pixi.js": "^5.3.0",
     "tinycolor2": "^1.4.1",
+    "typescript": "^3.9.6",
     "v8-compile-cache": "^2.1.1",
     "webpack": "^4.43.0",
     "zebras": "0.0.18"
