--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
     "@pixi/unsafe-eval": "^5.3.0",
     "bulma": "^0.8.2",
     "electron-is-dev": "^1.0.1",
+    "fengari": "^0.1.4",
     "pixi.js": "^5.3.0",
     "tinycolor2": "^1.4.1",
-    "typescript": "^3.9.6",
     "v8-compile-cache": "^2.1.1",
     "webpack": "^4.43.0",
     "zebras": "0.0.18"
@@ -94,6 +94,7 @@
     "electron": "^9.0.2",
     "electron-builder": "^22.7.0",
     "rimraf": "^2.6.3",
+    "typescript": "^3.9.6",
     "run-script-os-fix": "^1.0.4"
   }
 }
