--- a/package.json
+++ b/package.json
@@ -80,12 +80,14 @@
   },
   "dependencies": {
     "@pixi/unsafe-eval": "^5.3.0",
+    "@types/victor": "^1.1.0",
     "bulma": "^0.8.2",
     "electron-is-dev": "^1.0.1",
     "fengari": "^0.1.4",
     "pixi.js": "^5.3.0",
     "tinycolor2": "^1.4.1",
     "v8-compile-cache": "^2.1.1",
+    "victor": "^1.1.0",
     "webpack": "^4.43.0",
     "zebras": "0.0.18"
   },
