Fix TravisCI github publishing by adding 'overwrite true'

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,7 @@ deploy:
   provider: releases
   token: $GH_TOKEN
   name: commit-"$TRAVIS_COMMIT_MESSAGE"-$TRAVIS_COMMIT
+  overwrite: true
   draft: true
   file: 
     - "dist/grapheno-installer.exe"
